--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextly-template",
   "version": "2.0.0",
-  "description": "Nextly Landing Page Template",
+  "description": "Real Estate Next.js Template built with Tailwind CSS",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/web3templates/nextly-template"
+    "url": "https://github.com/ThomasGerasis/real-estate-frontend.git"
   },
   "keywords": [
     "nextjs",
     "tailwindcss",
     "free"
   ],
-  "author": "Surjith S M",
+  "author": "THomas Gerasis",
   "license": "ISC",
   "dependencies": {
     "@headlessui/react": "^2.0.3",
