--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "next": "14.2.3",
+    "next-intl": "^4.8.2",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
